--- a/apk/res/values-hu/strings.xml
+++ b/apk/res/values-hu/strings.xml
@@ -541,10 +541,10 @@
     <string name="onboarding_description" msgid="3479157507808350452">"A Health Connect tárolja az egészségével és a fitnesztevékenységeivel kapcsolatos adatokat, így könnyedén szinkronizálhatja az eszközén lévő különböző alkalmazásokat."</string>
     <string name="onboarding_description_health_records" msgid="6586657048844511252">"A Health Connect tárolja és szinkronizálja az Ön különböző alkalmazásokból származó egészségügyi és fitneszadatait.\n\n"<b>"Fitnesszel és jólléttel kapcsolatos adatok,"</b>" például edzések, lépésszám, táplálkozás, alvás és egyebek\n\n"<b>"Egészségügyi nyilvántartások,"</b>" például oltások, laboratóriumi eredmények és egyebek"</string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"A Health Connect segítségével lehetősége van a következőkre:"</string>
-    <string name="share_data" msgid="3481932156368883946">"Megoszthat adatokat az alkalmazásaival"</string>
-    <string name="share_data_description" msgid="2919871301634375092">"Beállíthatja, hogy az egyes alkalmazások milyen adatokat olvashatnak/írhatnak a Health Connectben"</string>
-    <string name="manage_your_settings" msgid="7391184508015127137">"Kezelheti a beállításokat és az adatvédelmet"</string>
-    <string name="manage_your_settings_description" msgid="557943168930365334">"Módosíthatja az alkalmazásengedélyeket és kezelheti az adatait"</string>
+    <!-- no translation found for share_data_text (6898398345784931678) -->
+    <skip />
+    <!-- no translation found for manage_your_settings_text (8425779735541136878) -->
+    <skip />
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"Vissza"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"Kezdő lépések"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"Adatok törlése"</string>
