--- a/apk/res/values-mk/strings.xml
+++ b/apk/res/values-mk/strings.xml
@@ -540,11 +540,11 @@
     <string name="onboarding_title" msgid="8550656211291180188">"Започнете со Health Connect"</string>
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connect ги складира вашите податоци за здравје и фитнес, што ви овозможува едноставен начин да ги синхронизирате различните апликации на вашиот уред"</string>
     <string name="onboarding_description_health_records" msgid="6586657048844511252">"Health Connect ги складира и синхронизира податоците за здравје и фитнес од различни апликации.\n\n"<b>"Податоци за фитнес и благосостојба,"</b>" заедно со сесии на вежбање, чекори, исхрана, спиење и друго\n\n"<b>"Здравствена евиденција,"</b>" заедно со вакцини, лабораториски резултати и друго"</string>
-    <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"Со Health Connect може"</string>
-    <string name="share_data" msgid="3481932156368883946">"Споделувајте податоци со вашите апликации"</string>
-    <string name="share_data_description" msgid="2919871301634375092">"Изберете ги податоците што секоја апликација може да ги чита или запишува во Health Connect"</string>
-    <string name="manage_your_settings" msgid="7391184508015127137">"Управувајте со поставките и приватноста"</string>
-    <string name="manage_your_settings_description" msgid="557943168930365334">"Менувајте ги дозволите за апликациите и управувајте со вашите податоци во секое време"</string>
+    <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"Можности на Health Connect:"</string>
+    <!-- no translation found for share_data_text (6898398345784931678) -->
+    <skip />
+    <!-- no translation found for manage_your_settings_text (8425779735541136878) -->
+    <skip />
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"Назад"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"Започнете"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"Избришете ги податоците"</string>
