--- a/apk/res/values-pl/strings.xml
+++ b/apk/res/values-pl/strings.xml
@@ -540,11 +540,11 @@
     <string name="onboarding_title" msgid="8550656211291180188">"Pierwsze kroki w Health Connect"</string>
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connect przechowuje Twoje dane o zdrowiu i aktywności fizycznej i jest prostym sposobem na synchronizację danych z różnych aplikacji na urządzeniu"</string>
     <string name="onboarding_description_health_records" msgid="6586657048844511252">"Health Connect przechowuje i synchronizuje Twoje dane o zdrowiu i aktywności fizycznej z różnych aplikacji.\n\n"<b>"Dane o zdrowiu i aktywności fizycznej"</b>", w tym sesje ćwiczeń, liczba kroków, informacje o odżywianiu i śnie oraz inne dane\n\n"<b>"Dane o stanie zdrowia"</b>", w tym szczepienia, wyniki badań laboratoryjnych oraz inne dane"</string>
-    <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"Dzięki Health Connect możesz:"</string>
-    <string name="share_data" msgid="3481932156368883946">"Udostępniaj dane aplikacjom"</string>
-    <string name="share_data_description" msgid="2919871301634375092">"Wybierz dane, jakie każda aplikacja będzie mogła odczytywać i zapisywać w Health Connect"</string>
-    <string name="manage_your_settings" msgid="7391184508015127137">"Zarządzaj ustawieniami i prywatnością"</string>
-    <string name="manage_your_settings_description" msgid="557943168930365334">"Zmieniaj uprawnienia aplikacji i zarządzaj danymi w dowolnej chwili"</string>
+    <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"Co możesz zrobić dzięki Health Connect:"</string>
+    <!-- no translation found for share_data_text (6898398345784931678) -->
+    <skip />
+    <!-- no translation found for manage_your_settings_text (8425779735541136878) -->
+    <skip />
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"Wróć"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"Rozpocznij"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"Usuń dane"</string>
