--- a/apk/res/values-ro/strings.xml
+++ b/apk/res/values-ro/strings.xml
@@ -541,10 +541,10 @@
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connect îți stochează datele despre sănătate și fitness, oferindu-ți o metodă simplă de a sincroniza aplicațiile diverse de pe dispozitiv"</string>
     <string name="onboarding_description_health_records" msgid="6586657048844511252">"Health Connect stochează și sincronizează datele despre sănătate și fitness din diferite aplicații.\n\n"<b>"Date despre fitness și wellness,"</b>" inclusiv sesiunile de exerciții, pașii, nutriția, somnul și altele\n\n"<b>"Înregistrări de sănătate,"</b>" inclusiv vaccinările, rezultatele analizelor și altele"</string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"Cu Health Connect"</string>
-    <string name="share_data" msgid="3481932156368883946">"Permite accesul aplicațiilor la date"</string>
-    <string name="share_data_description" msgid="2919871301634375092">"Alege datele pe care fiecare aplicație le poate citi sau scrie în Health Connect"</string>
-    <string name="manage_your_settings" msgid="7391184508015127137">"Gestionează-ți setările și confidențialitatea"</string>
-    <string name="manage_your_settings_description" msgid="557943168930365334">"Modifică permisiunile pentru aplicație și gestionează-ți datele oricând"</string>
+    <!-- no translation found for share_data_text (6898398345784931678) -->
+    <skip />
+    <!-- no translation found for manage_your_settings_text (8425779735541136878) -->
+    <skip />
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"Înapoi"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"Începe"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"Șterge datele"</string>
