--- a/apk/res/values-fi/strings.xml
+++ b/apk/res/values-fi/strings.xml
@@ -541,10 +541,10 @@
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connect tallentaa terveys‑ ja kuntodatasi ja tarjoaa helpon tavan synkronoida eri sovelluksia laitteellasi"</string>
     <string name="onboarding_description_health_records" msgid="6586657048844511252">"Health Connect tallentaa ja synkronoi terveys- ja kuntoiludataa eri sovelluksista.\n\n"<b>"Kuntoilu- ja hyvinvointidata,"</b>" esim. treenit, askeleet, ravinto ja uni\n\n"<b>"Terveystiedot,"</b>" esim. rokotukset ja laboratoriotulokset"</string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"Health Connectilla voit tehdä seuraavia asioita"</string>
-    <string name="share_data" msgid="3481932156368883946">"Jaa dataa sovelluksille"</string>
-    <string name="share_data_description" msgid="2919871301634375092">"Valitse, mitä dataa kukin sovellus voi lukea tai kirjoittaa Health Connectiin"</string>
-    <string name="manage_your_settings" msgid="7391184508015127137">"Tee asetus- ja yksityisyysvalinnat"</string>
-    <string name="manage_your_settings_description" msgid="557943168930365334">"Muuta sovelluslupia ja ylläpidä dataa milloin vain"</string>
+    <!-- no translation found for share_data_text (6898398345784931678) -->
+    <skip />
+    <!-- no translation found for manage_your_settings_text (8425779735541136878) -->
+    <skip />
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"Takaisin"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"Aloita"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"Poista data"</string>
@@ -606,7 +606,7 @@
     <string name="aggregation_total" msgid="5641333638662325184">"Yhteensä: <xliff:g id="TOTAL_VALUE">%s</xliff:g>"</string>
     <string name="watt_format" msgid="8500953817369623803">"{value,plural, =1{1 W}other{# W}}"</string>
     <string name="watt_format_long" msgid="7107446926499116109">"{value,plural, =1{1 watti}other{# watti}}"</string>
-    <string name="steps_value" msgid="5779393974668105298">"{count,plural, =1{1 askel}other{# askel}}"</string>
+    <string name="steps_value" msgid="5779393974668105298">"{count,plural, =1{1 askel}other{# askelta}}"</string>
     <string name="steps_per_minute" msgid="5527133010067502098">"{value,plural, =1{1 askel/min}other{# askelta/min}}"</string>
     <string name="steps_per_minute_long" msgid="6146224261144843301">"{value,plural, =1{1 askel minuutissa}other{# askelta minuutissa}}"</string>
     <string name="heart_rate_value" msgid="6936476566204248578">"{count,plural, =1{1 bpm}other{# bpm}}"</string>
