--- a/apk/res/values-hi/strings.xml
+++ b/apk/res/values-hi/strings.xml
@@ -52,24 +52,24 @@
     <string name="today_header" msgid="1006837293203834373">"आज"</string>
     <string name="yesterday_header" msgid="6652176268273681505">"बीता हुआ कल"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"पढ़ें: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <string name="write_data_access_label" msgid="105976369853871061">"लिखें: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
+    <string name="write_data_access_label" msgid="105976369853871061">"जोड़, मिटा या अपडेट कर सकता हैः <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"अनुमतियां मैनेज करें"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"समय: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
-    <string name="activity_category_uppercase" msgid="136628843341377088">"गतिविधि"</string>
+    <string name="activity_category_uppercase" msgid="136628843341377088">"गतिविधि का डेटा"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"गतिविधि"</string>
-    <string name="body_measurements_category_uppercase" msgid="422923782603313038">"शरीर की माप का डेटा"</string>
+    <string name="body_measurements_category_uppercase" msgid="422923782603313038">"शरीर की माप"</string>
     <string name="body_measurements_category_lowercase" msgid="2259696274629666992">"शरीर की माप से जुड़ी जानकारी"</string>
     <string name="sleep_category_uppercase" msgid="3422452674899706786">"नींद"</string>
     <string name="sleep_category_lowercase" msgid="842609634386839011">"नींद से जुड़ी जानकारी"</string>
     <string name="vitals_category_uppercase" msgid="8982333138032938623">"बीपी, धड़कन की दर वगैरह का डेटा"</string>
     <string name="vitals_category_lowercase" msgid="4664457787866407963">"ज़रूरी जानकारी"</string>
-    <string name="cycle_tracking_category_uppercase" msgid="4723200714782660489">"पीरियड साइकल का डेटा"</string>
+    <string name="cycle_tracking_category_uppercase" msgid="4723200714782660489">"पीरियड साइकल"</string>
     <string name="cycle_tracking_category_lowercase" msgid="5245446435975317209">"पीरियड साइकल का डेटा"</string>
     <string name="nutrition_category_uppercase" msgid="6665096097987741036">"पोषण"</string>
     <string name="nutrition_category_lowercase" msgid="7804134941649488990">"पोषण"</string>
-    <string name="wellness_category_uppercase" msgid="5900304317921557780">"सेहत का ख्याल रखना"</string>
-    <string name="wellness_category_lowercase" msgid="1327642415424743588">"सेहत का ख्याल रखना"</string>
+    <string name="wellness_category_uppercase" msgid="5900304317921557780">"सेहत का डेटा"</string>
+    <string name="wellness_category_lowercase" msgid="1327642415424743588">"सेहत का डेटा"</string>
     <string name="browse_data_category" msgid="4813955610391357638">"डेटा ब्राउज़ करें"</string>
     <string name="manage_data_section" msgid="5859629270946511903">"डेटा मैनेज करें"</string>
     <string name="export_data_button" msgid="7783329820434117744">"डेटा एक्सपोर्ट करें"</string>
@@ -256,11 +256,11 @@
     <string name="sexual_activity_lowercase_label" msgid="8285364117437418834">"सेक्शुअल गतिविधि का डेटा"</string>
     <string name="sexual_activity_read_content_description" msgid="4937721417714312007">"सेक्शुअल गतिविधि का डेटा पढ़ने की अनुमति दें"</string>
     <string name="sexual_activity_write_content_description" msgid="3063448245882840534">"सेक्शुअल गतिविधि का डेटा सेव करने की अनुमति दें"</string>
-    <string name="spotting_uppercase_label" msgid="5106739829390033240">"खून के हल्के रिसाव का डेटा"</string>
+    <string name="spotting_uppercase_label" msgid="5106739829390033240">"स्पॉटिंग का डेटा"</string>
     <string name="spotting_lowercase_label" msgid="4361141146039580583">"खून के हल्के रिसाव का डेटा"</string>
     <string name="spotting_read_content_description" msgid="5422420770022357631">"खून के हल्के रिसाव का डेटा पढ़ने की अनुमति दें"</string>
     <string name="spotting_write_content_description" msgid="9049462631184362964">"खून के हल्के रिसाव का डेटा सेव करने की अनुमति दें"</string>
-    <string name="hydration_uppercase_label" msgid="1196083392597480565">"हाइड्रेशन"</string>
+    <string name="hydration_uppercase_label" msgid="1196083392597480565">"हाइड्रेशन का डेटा"</string>
     <string name="hydration_lowercase_label" msgid="7793261552870970551">"हाइड्रेशन का डेटा"</string>
     <string name="hydration_read_content_description" msgid="3255941233933808082">"हाइड्रेशन का डेटा पढ़ने की अनुमति दें"</string>
     <string name="hydration_write_content_description" msgid="7549819425875969941">"हाइड्रेशन का डेटा सेव करने की अनुमति दें"</string>
@@ -272,7 +272,7 @@
     <string name="sleep_lowercase_label" msgid="7795584924503475035">"नींद का डेटा"</string>
     <string name="sleep_read_content_description" msgid="7064608272681424436">"नींद का डेटा पढ़ने की अनुमति दें"</string>
     <string name="sleep_write_content_description" msgid="2259414465110376554">"नींद का डेटा सेव करने की अनुमति दें"</string>
-    <string name="basal_body_temperature_uppercase_label" msgid="4571393253935677019">"आराम करते समय शरीर का तापमान"</string>
+    <string name="basal_body_temperature_uppercase_label" msgid="4571393253935677019">"आराम करते समय शरीर के तापमान का डेटा"</string>
     <string name="basal_body_temperature_lowercase_label" msgid="3363829208971016662">"आराम करते समय शरीर के तापमान का डेटा"</string>
     <string name="basal_body_temperature_read_content_description" msgid="3342604362011725500">"आराम करते समय शरीर के तापमान का डेटा देखने की अनुमति दें"</string>
     <string name="basal_body_temperature_write_content_description" msgid="1081636817359407622">"आराम करते समय शरीर के तापमान का डेटा सेव करने की अनुमति दें"</string>
@@ -418,7 +418,7 @@
     <string name="needs_updating_apps_section_title" msgid="8561510523049921199">"अपडेट करने की ज़रूरत है"</string>
     <string name="settings_and_help_header" msgid="5749710693017621168">"सेटिंग और सहायता"</string>
     <string name="disconnect_all_apps" msgid="748945115977534726">"सभी ऐप्लिकेशन के लिए ऐक्सेस हटाएं"</string>
-    <string name="manage_permissions_read_header" msgid="2031153753057983683">"यह जानकारी पढ़ने की अनुमति है"</string>
+    <string name="manage_permissions_read_header" msgid="2031153753057983683">"यह जानकारी देखने की अनुमति है"</string>
     <string name="manage_permissions_write_header" msgid="6876806848658168370">"यह जानकारी सेव करने की अनुमति है"</string>
     <string name="no_apps_allowed" msgid="5794833581324128108">"किसी भी ऐप्लिकेशन को अनुमति नहीं है"</string>
     <string name="no_apps_denied" msgid="743327680286446017">"सभी ऐप्लिकेशन को अनुमति दी गई"</string>
@@ -539,12 +539,12 @@
     <string name="export_import_go_to_play_store_text" msgid="3210733429377429794">"Play Store पर जाएं"</string>
     <string name="onboarding_title" msgid="8550656211291180188">"Health Connect का इस्तेमाल शुरू करें"</string>
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connect में, आपकी सेहत और फ़िटनेस से जुड़ा डेटा सेव किया जाता है. इससे अपने डिवाइस में अलग-अलग ऐप्लिकेशन को आसानी से सिंक करने में मदद मिलती है"</string>
-    <string name="onboarding_description_health_records" msgid="6586657048844511252">"Health Connect, अलग-अलग ऐप्लिकेशन से सेहत और फ़िटनेस से जुड़ा आपका डेटा सेव और सिंक करता है.\n\n"<b>"फ़िटनेस और सेहत का डेटा,"</b>" जिसमें कसरत के सेशन, कदमों की संख्या, पोषण, नींद वगैरह का डेटा शामिल है\n\n"<b>"सेहत का डेटा,"</b>" जिसमें टीके, लैब के नतीजे वगैरह शामिल हैं"</string>
+    <string name="onboarding_description_health_records" msgid="6586657048844511252">"Health Connect, अलग-अलग ऐप्लिकेशन से सेहत और फ़िटनेस से जुड़ा आपका डेटा सेव और सिंक करता है.\n\n"<b>"फ़िटनेस और सेहत का डेटा,"</b>" जिसमें कसरत के सेशन, कदमों की संख्या, पोषण, नींद वगैरह का डेटा शामिल है\n\n"<b>"सेहत का डेटा,"</b>" जिसमें टीकाकरण की जानकारी, लैब के नतीजे वगैरह शामिल हैं"</string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"Health Connect की मदद से ये काम किए जा सकते हैं"</string>
-    <string name="share_data" msgid="3481932156368883946">"ऐप्लिकेशन के साथ डेटा शेयर करें"</string>
-    <string name="share_data_description" msgid="2919871301634375092">"यह चुनें कि हर ऐप्लिकेशन, Health Connect में कौनसा डेटा देख सकता है और उसमें बदलाव कर सकता है"</string>
-    <string name="manage_your_settings" msgid="7391184508015127137">"सेटिंग और निजता को मैनेज करें"</string>
-    <string name="manage_your_settings_description" msgid="557943168930365334">"किसी भी समय, ऐप्लिकेशन को दी गई अनुमतियों में बदलाव करें और अपना डेटा मैनेज करें"</string>
+    <!-- no translation found for share_data_text (6898398345784931678) -->
+    <skip />
+    <!-- no translation found for manage_your_settings_text (8425779735541136878) -->
+    <skip />
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"वापस जाएं"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"शुरू करें"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"डेटा मिटाएं"</string>
@@ -785,13 +785,13 @@
     <string name="sleep_stage_deep" msgid="3134557407657258364">"गहरी नींद"</string>
     <string name="sleep_stage_unknown" msgid="8664190491902295991">"कोई जानकारी नहीं"</string>
     <string name="mindfulness_type_breathing" msgid="3175952922332753437">"सांस लेना"</string>
-    <string name="mindfulness_type_meditation" msgid="4453014833652749254">"ध्यान लगाना"</string>
+    <string name="mindfulness_type_meditation" msgid="4453014833652749254">"ध्यान (मेडिटेशन)"</string>
     <string name="mindfulness_type_movement" msgid="600930756800362680">"हलचल"</string>
     <string name="mindfulness_type_music" msgid="7041364137895485917">"संगीत"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"अन्य"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"बिना गाइड के"</string>
     <string name="activity_intensity_type_moderate" msgid="7974792315871109564">"काफ़ी हद तक ठीक है"</string>
-    <string name="activity_intensity_type_vigorous" msgid="5651020560923780330">"बहुत हद तक ठीक है"</string>
+    <string name="activity_intensity_type_vigorous" msgid="5651020560923780330">"बहुत तेज़"</string>
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> मिनट"</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> घंटे <xliff:g id="MIN">%2$s</xliff:g> मिनट"</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> घंटा"</string>
