--- a/apk/res/values-iw/strings.xml
+++ b/apk/res/values-iw/strings.xml
@@ -29,7 +29,7 @@
     <string name="no_data" msgid="1906986019249068659">"אין נתונים"</string>
     <string name="connected_apps_title" msgid="279942692804743223">"הרשאות שניתנות לאפליקציות"</string>
     <string name="connected_apps_subtitle" msgid="8464462995533399175">"ניהול האפליקציות וההרשאות"</string>
-    <string name="only_one_connected_app_button_subtitle" msgid="1429452274331178121">"ל-<xliff:g id="NUM_APPS_CONNECTED">%1$s</xliff:g> אפליקציות מתוך <xliff:g id="NUM_POSSIBLE_APPS">%2$s</xliff:g> יש גישה"</string>
+    <string name="only_one_connected_app_button_subtitle" msgid="1429452274331178121">"ל-<xliff:g id="NUM_APPS_CONNECTED">%1$s</xliff:g> מתוך <xliff:g id="NUM_POSSIBLE_APPS">%2$s</xliff:g> אפליקציות יש גישה"</string>
     <string name="connected_apps_button_subtitle" msgid="8855528937028500370">"ל-<xliff:g id="NUM_APPS_CONNECTED">%1$s</xliff:g> מתוך <xliff:g id="NUM_POSSIBLE_APPS">%2$s</xliff:g> אפליקציות יש הרשאת גישה"</string>
     <string name="connected_apps_all_apps_connected_subtitle" msgid="3432698291862059492">"ל-<xliff:g id="NUM_APPS_CONNECTED">%1$s</xliff:g> אפליקציות יש הרשאת גישה"</string>
     <string name="connected_apps_one_app_connected_subtitle" msgid="9095815882509754340">"לאפליקציה אחת (<xliff:g id="NUM_APPS_CONNECTED">%1$s</xliff:g>) יש הרשאת גישה"</string>
@@ -47,12 +47,12 @@
     <string name="backup_and_restore_settings_summary" msgid="4345972157089493077">"ייצוא וייבוא של נתונים"</string>
     <string name="recent_access_header" msgid="7623497371790225888">"אפליקציות שניגשו לנתונים לאחרונה"</string>
     <string name="no_recent_access" msgid="4724297929902441784">"אף אפליקציה לא ניגשה לאחרונה ל-Health Connect"</string>
-    <string name="show_recent_access_entries_button_title" msgid="3483460066767350419">"הצגת כל האפליקציות שניגשו לאחרונה"</string>
+    <string name="show_recent_access_entries_button_title" msgid="3483460066767350419">"לצפייה בכל האפליקציות שניגשו לנתונים לאחרונה"</string>
     <string name="recent_access_screen_description" msgid="331101209889185402">"כאן אפשר לראות אילו אפליקציות ניגשו לנתונים שלך ב-24 השעות האחרונות"</string>
     <string name="today_header" msgid="1006837293203834373">"היום"</string>
     <string name="yesterday_header" msgid="6652176268273681505">"אתמול"</string>
     <string name="read_data_access_label" msgid="8968758932021241976">"קריאה: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
-    <string name="write_data_access_label" msgid="105976369853871061">"כתיבה: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
+    <string name="write_data_access_label" msgid="105976369853871061">"הרשאת כתיבה ועדכון של נתונים: <xliff:g id="DATA_TYPE">%s</xliff:g>"</string>
     <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"ניהול הרשאות"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"זמן: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
@@ -79,8 +79,8 @@
     <string name="app_priority_button" msgid="3126133977893705098">"העדיפות של האפליקציות"</string>
     <string name="delete_category_data_button" msgid="2324773398768267043">"מחיקת הנתונים על <xliff:g id="CATEGORY">%s</xliff:g>"</string>
     <string name="select_all_apps_title" msgid="884487568464305913">"כל האפליקציות"</string>
-    <string name="can_read" msgid="4568261079308309564">"יכולת לקרוא נתונים מסוג <xliff:g id="PERMISSION_TYPE">%s</xliff:g>"</string>
-    <string name="can_write" msgid="5082414937218423823">"יכולת לשמור נתונים מסוג <xliff:g id="PERMISSION_TYPE">%s</xliff:g>"</string>
+    <string name="can_read" msgid="4568261079308309564">"קריאת נתונים של <xliff:g id="PERMISSION_TYPE">%s</xliff:g>"</string>
+    <string name="can_write" msgid="5082414937218423823">"שמירת נתונים של <xliff:g id="PERMISSION_TYPE">%s</xliff:g>"</string>
     <string name="inactive_apps" msgid="8956546286760797760">"אפליקציות לא פעילות"</string>
     <string name="inactive_apps_message" msgid="8335803540719022910">"האפליקציות האלה כבר לא יכולות לקרוא או לשמור נתונים מסוג <xliff:g id="DATA_TYPE">%s</xliff:g>, אבל הנתונים שלהן עדיין מאוחסנים ב-Health Connect"</string>
     <string name="data_access_empty_message" msgid="9084350402254264452">"אפליקציות כבר לא יוכלו לקרוא או לכתוב נתונים מסוג <xliff:g id="DATA_TYPE_0">%1$s</xliff:g> ואין נתונים מסוג <xliff:g id="DATA_TYPE_2">%2$s</xliff:g> שמאוחסנים ב-Health Connect"</string>
@@ -426,7 +426,7 @@
     <string name="permissions_disconnect_all_dialog_message" msgid="3151109627457270499">"לאף אחת מהאפליקציות שלך לא תהיה אפשרות לגשת לנתונים או להוסיף נתונים חדשים ל-Health Connect. הפעולה הזאת לא תמחק נתונים קיימים.\n\nהפעולה הזאת לא משפיעה על הרשאות אחרות שעשויות להיות לאפליקציה, כמו המיקום, המצלמה או המיקרופון."</string>
     <string name="permissions_disconnect_all_dialog_disconnect" msgid="2134136493310257746">"הסרת הכול"</string>
     <string name="manage_permissions_manage_app_header" msgid="6356348062088358761">"ניהול האפליקציה"</string>
-    <string name="see_app_data" msgid="3951030076195119476">"לצפייה בנתוני האפליקציה"</string>
+    <string name="see_app_data" msgid="3951030076195119476">"צפייה בנתוני האפליקציה"</string>
     <string name="remove_access_for_this_app" msgid="7701101420310711833">"הסרת הגישה של האפליקציה הזו"</string>
     <string name="delete_app_data" msgid="6890357774873859952">"מחיקת נתוני האפליקציה"</string>
     <string name="inactive_apps_section_title" msgid="7492812973696378690">"אפליקציות לא פעילות"</string>
@@ -540,11 +540,11 @@
     <string name="onboarding_title" msgid="8550656211291180188">"איך מתחילים להשתמש ב-Health Connect"</string>
     <string name="onboarding_description" msgid="3479157507808350452">"אפליקציית Health Connect מאחסנת את נתוני הבריאות והכושר שלך, ומאפשרת לך לסנכרן בקלות את האפליקציות השונות במכשיר"</string>
     <string name="onboarding_description_health_records" msgid="6586657048844511252">"אפליקציית Health Connect מאחסנת ומסנכרנת את נתוני הבריאות והכושר שלך מאפליקציות שונות.\n\n"<b>"נתוני כושר ורווחה אישית,"</b>" כולל אימוני כושר, צעדים, תזונה, שינה ועוד\n\n"<b>"סיכומי מצב בריאותי,"</b>" כולל חיסונים, תוצאות של בדיקות מעבדה ועוד"</string>
-    <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"Health Connect מאפשרת לכם:"</string>
-    <string name="share_data" msgid="3481932156368883946">"שיתוף נתונים עם האפליקציות שלך"</string>
-    <string name="share_data_description" msgid="2919871301634375092">"בחירה בסוגי הנתונים שכל אפליקציה יכולה לקרוא או לכתוב ב-Health Connect"</string>
-    <string name="manage_your_settings" msgid="7391184508015127137">"ניהול ההגדרות והפרטיות"</string>
-    <string name="manage_your_settings_description" msgid="557943168930365334">"אפשר לשנות את ההרשאות הניתנות לאפליקציה ולנהל את הנתונים בכל שלב"</string>
+    <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"מה אפשר לעשות עם Health Connect:"</string>
+    <!-- no translation found for share_data_text (6898398345784931678) -->
+    <skip />
+    <!-- no translation found for manage_your_settings_text (8425779735541136878) -->
+    <skip />
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"הקודם"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"קדימה, מתחילים"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"מחיקת נתונים"</string>
@@ -1119,7 +1119,7 @@
     <string name="start_using_hc_set_up_button" msgid="7486865297236439364">"הגדרה"</string>
     <string name="connect_more_apps_banner_title" msgid="4746581834305054229">"חיבור אפליקציות נוספות"</string>
     <string name="connect_more_apps_banner_content" msgid="8104544246031860111">"אפשר להתחיל לשתף נתונים בין <xliff:g id="APP_NAME">%s</xliff:g> לבין האפליקציות בתחום הבריאות בטלפון"</string>
-    <string name="connect_more_apps_set_up_button" msgid="4491201768717567269">"הגדרה"</string>
+    <string name="connect_more_apps_set_up_button" msgid="4491201768717567269">"להגדרה"</string>
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"לעיון באפליקציות התואמות"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"כדאי לחפש עוד אפליקציות שמסתנכרנות עם <xliff:g id="APP_NAME">%s</xliff:g> דרך Health Connect"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"לעיון בחנות האפליקציות"</string>
