--- a/apk/res/values-kk/strings.xml
+++ b/apk/res/values-kk/strings.xml
@@ -541,10 +541,10 @@
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connect денсаулық және фитнес деректерін сақтап, құрылғыда әртүрлі қолданбаны синхрондаудың қарапайым жолын ұсынады."</string>
     <string name="onboarding_description_health_records" msgid="6586657048844511252">"Health Connect әртүрлі қолданбалардағы денсаулық және фитнес деректерін сақтайды және синхрондайды.\n\n"<b>"Фитнес және сауықтыру деректері,"</b>" соның ішінде жаттығулар, қадамдар, тамақтану, ұйқы және т.б.\n\n"<b>"Денсаулық туралы ақпарат,"</b>" соның ішінде вакциналар, зертханалық нәтижелер және т.б."</string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"Health Connect қолданбасымен мына әрекеттерді орындай аласыз:"</string>
-    <string name="share_data" msgid="3481932156368883946">"Деректерді қолданбалармен бөлісу"</string>
-    <string name="share_data_description" msgid="2919871301634375092">"Әр қолданба оқи алатын немесе Health Connect қолданбасына жаза алатын деректерді таңдауға болады."</string>
-    <string name="manage_your_settings" msgid="7391184508015127137">"Параметрлерді және құпиялықты басқару"</string>
-    <string name="manage_your_settings_description" msgid="557943168930365334">"Кез келген уақытта қолданба рұқсаттарын өзгертуге және деректерді басқаруға болады."</string>
+    <!-- no translation found for share_data_text (6898398345784931678) -->
+    <skip />
+    <!-- no translation found for manage_your_settings_text (8425779735541136878) -->
+    <skip />
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"Артқа"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"Бастау"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"Деректерді жою"</string>
