--- a/apk/res/values-mn/strings.xml
+++ b/apk/res/values-mn/strings.xml
@@ -541,10 +541,10 @@
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connect таны эрүүл мэнд, фитнесийн өгөгдлийг хадгалснаар та төхөөрөмж дээрээ байгаа өөр өөр аппуудыг энгийн аргаар синк хийх боломжтой"</string>
     <string name="onboarding_description_health_records" msgid="6586657048844511252">"Health Connect өөр өөр аппаас эрүүл мэнд, фитнесийн өгөгдлийг тань хадгалж, синк хийдэг.\n\nДасгалын харилцан үйлдэл, алхсан тоо, шим тэжээл, унтлага болон бусад "<b>"фитнес, эрүүл оршихуйн өгөгдөл"</b>\n\n"Вакцин, лабораторийн хариу болон бусад "<b>"эрүүл мэндийн түүх"</b></string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"Та Health Connect-р дараахыг хийх боломжтой:"</string>
-    <string name="share_data" msgid="3481932156368883946">"Аппуудтайгаа өгөгдөл хуваалцаарай"</string>
-    <string name="share_data_description" msgid="2919871301634375092">"Апп бүрийн Health Connect-с унших болон түүнд бичих боломжтой өгөгдлийг сонгоно уу"</string>
-    <string name="manage_your_settings" msgid="7391184508015127137">"Тохиргоо болон нууцлалаа удирдаарай"</string>
-    <string name="manage_your_settings_description" msgid="557943168930365334">"Хүссэн үедээ аппын зөвшөөрлийг өөрчилж, өгөгдлөө удирдаарай"</string>
+    <!-- no translation found for share_data_text (6898398345784931678) -->
+    <skip />
+    <!-- no translation found for manage_your_settings_text (8425779735541136878) -->
+    <skip />
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"Буцах"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"Эхлүүлэх"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"Өгөгдлийг устгах"</string>
