--- a/apk/res/values-mr/strings.xml
+++ b/apk/res/values-mr/strings.xml
@@ -443,7 +443,7 @@
     <string name="additional_access_summary" msgid="1076197455435130191">"मागील डेटा, बॅकग्राउंड डेटा"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"या ॲपसाठीच्या अतिरिक्त परवानग्या काढून टाकल्या आहेत"</string>
     <string name="permissions_header" msgid="6519976063360071569">"परवानग्या"</string>
-    <string name="fitness_permissions" msgid="586264186537460254">"सुदृढता आणि स्वास्थ्य"</string>
+    <string name="fitness_permissions" msgid="586264186537460254">"फिटनेस आणि स्वास्थ्य"</string>
     <string name="fitness_permissions_summary" msgid="6476469281589015459">"व्यायाम, झोप, पोषण आणि इतर गोष्टी"</string>
     <string name="medical_permissions" msgid="1224097151249321566">"आरोग्यविषयक माहिती"</string>
     <string name="medical_permissions_lowercase" msgid="3969792205103436491">"आरोग्यविषयक माहिती"</string>
@@ -539,12 +539,12 @@
     <string name="export_import_go_to_play_store_text" msgid="3210733429377429794">"Play Store वर जा"</string>
     <string name="onboarding_title" msgid="8550656211291180188">"Health Connect सह सुरुवात करा"</string>
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connect हे तुमचा आरोग्य आणि फिटनेससंबंधी डेटा स्टोअर करते व तुम्हाला तुमच्या डिव्हाइसवरील वेगवेगळी अ‍ॅप्स सिंक करण्याचा सोपा मार्ग देते"</string>
-    <string name="onboarding_description_health_records" msgid="6586657048844511252">"Health Connect हे विविध ॲप्समधील तुमचा आरोग्य आणि फिटनेससंबंधित डेटा स्टोअर करून सिंक करते.\n\n"<b>"व्यायामाची सेशन, पावले, पोषण, झोप"</b>" आणि आणखी बऱ्याच गोष्टींसह \n\n"<b>"आरोग्य आणि स्वास्थ्य डेटा"</b>" लसी, लॅबमधील परिणाम आणि आणखी बरेच काही"</string>
+    <string name="onboarding_description_health_records" msgid="6586657048844511252">"Health Connect हे विविध ॲप्समधील तुमचा आरोग्य आणि फिटनेससंबंधित डेटा स्टोअर करून सिंक करते.\n\n"<b>"फिटनेस आणि स्वास्थ्यासंबंधित डेटा"</b>" व्यायामाची सेशन, पावले, पोषण, झोप आणि आणखी बऱ्याच गोष्टी\n\n"<b>"आरोग्यविषयक माहिती"</b>" लसी, लॅबमधील परिणाम आणि आणखी बरेच काही"</string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"Health Connect वापरून तुम्ही पुढील गोष्टी करू शकता"</string>
-    <string name="share_data" msgid="3481932156368883946">"तुमच्या अ‍ॅप्ससह डेटा शेअर करा"</string>
-    <string name="share_data_description" msgid="2919871301634375092">"प्रत्येक अ‍ॅप हे Health Connect वर कोणता डेटा रीड किंवा राइट करू शकते ते निवडा"</string>
-    <string name="manage_your_settings" msgid="7391184508015127137">"तुमची सेटिंग्ज आणि गोपनीयता व्यवस्थापित करा"</string>
-    <string name="manage_your_settings_description" msgid="557943168930365334">"अ‍ॅप परवानग्या बदला आणि तुमचा डेटा कधीही व्यवस्थापित करा"</string>
+    <!-- no translation found for share_data_text (6898398345784931678) -->
+    <skip />
+    <!-- no translation found for manage_your_settings_text (8425779735541136878) -->
+    <skip />
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"मागे जा"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"सुरुवात करा"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"डेटा हटवा"</string>
@@ -1113,7 +1113,7 @@
     <string name="this_month_header" msgid="2452395268894677189">"हा महिना"</string>
     <string name="last_month_header" msgid="1359164797239191253">"मागील महिना"</string>
     <string name="tab_entries" msgid="3402700951602029493">"एंट्री"</string>
-    <string name="tab_access" msgid="7818197975407243701">"अ‍ॅक्सेस करा"</string>
+    <string name="tab_access" msgid="7818197975407243701">"अ‍ॅक्सेस"</string>
     <string name="start_using_hc_banner_title" msgid="2030178284749796384">"Health Connect वापरण्यास सुरुवात करा"</string>
     <string name="start_using_hc_banner_content" msgid="3171560198945933334">"अ‍ॅप्सदरम्यान आरोग्य आणि फिटनेससंबंधित डेटा शेअर करण्यासाठी तुमची सुरुवातीची अ‍ॅप्स सिंक करा"</string>
     <string name="start_using_hc_set_up_button" msgid="7486865297236439364">"सेट करा"</string>
@@ -1127,7 +1127,7 @@
     <string name="lock_screen_banner_content" msgid="3392527073622152481">"तुमच्या आरोग्यासंबंधित डेटाच्या अतिरिक्त सुरक्षेसाठी, या डिव्हाइससाठी पिन, पॅटर्न किंवा पासवर्ड सेट करा"</string>
     <string name="lock_screen_banner_button" msgid="2537090011380728122">"स्क्रीन लॉक सेट करा"</string>
     <string name="select_all" msgid="837499881590001166">"सर्व निवडा"</string>
-    <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"कनेक्ट केलेली अ‍ॅप्स यापुढे Health Connect मधील हा डेटा अ‍ॅक्सेस करू शकणार नाहीत"</string>
+    <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"कनेक्ट केलेली अ‍ॅप्स यापुढे Health Connect मधील हा डेटा रीड करू शकणार नाहीत"</string>
     <string name="a11y_checked" msgid="3685413382346589880">"खूण केली आहे"</string>
     <string name="a11y_unchecked" msgid="6258943223981886207">"खूण केली नाही"</string>
     <string name="a11y_map_description" msgid="4992907698581164434">"व्यायामाची योजना उपलब्ध आहे"</string>
@@ -1162,18 +1162,18 @@
     <string name="wear_app_perms_24h_access_yest" msgid="325061728619254928">"काल <xliff:g id="TIME_DATE">%1$s</xliff:g> वाजता ॲक्सेस केले"</string>
     <string name="wear_app_perms_7d_access" msgid="5694169440873563459">"<xliff:g id="TIME_DATE_0">%1$s</xliff:g> ला <xliff:g id="TIME_DATE_1">%2$s</xliff:g> वाजता ॲक्सेस केले"</string>
     <string name="request_permissions_allow_all_the_time" msgid="4081502779872893569">"नेहमी अनुमती द्या"</string>
-    <string name="request_permissions_allow_selected" msgid="218527615680495438">"निवडलेल्या अनुमती द्या"</string>
+    <string name="request_permissions_allow_selected" msgid="218527615680495438">"निवडीला अनुमती द्या"</string>
     <string name="request_permissions_while_using_the_app" msgid="5155929974398889727">"ॲप वापरताना"</string>
     <string name="request_permissions_deny_all" msgid="4123735770293545320">"सर्वांना नकार द्या"</string>
-    <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"<xliff:g id="APP_NAME">%1$s</xliff:g> फिटनेस आणि स्वास्थ्याशी संबंधित डेटा अ‍ॅक्सेस करण्याची अनुमती द्यायची आहे का?"</string>
+    <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"<xliff:g id="APP_NAME">%1$s</xliff:g> ला फिटनेस आणि स्वास्थ्यासंबंधित डेटा अ‍ॅक्सेस करण्याची अनुमती द्यायची आहे का?"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> ने <xliff:g id="DATA_TYPES">%2$s</xliff:g> अ‍ॅक्सेस करण्याची विनंती केली आहे.\n\nसर्वांना अनुमती देणे किंवा वैयक्तिकरित्या नियंत्रित करणे निवडा."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"<xliff:g id="APP_NAME">%1$s</xliff:g> ला <xliff:g id="DATA_TYPE">%2$s</xliff:g> अ‍ॅक्सेस करण्याची अनुमती द्यायची आहे का?"</string>
-    <string name="fitness_and_wellness" msgid="2002316898861559748">"सुदृढता आणि स्वास्थ्य"</string>
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"फिटनेस आणि स्वास्थ्य"</string>
     <string name="view_permissions_all_the_time" msgid="6899702815770193290">"पूर्ण वेळ"</string>
     <string name="view_permissions_while_in_use" msgid="2031627107397429473">"वापरत असताना"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"पूर्ण वेळ"</string>
     <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"वापरत असताना"</string>
-    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> हे तुमचा सुदृढता आणि स्वास्थ्य यासंबंधित सर्व डेटा अ‍ॅक्सेस करू शकते <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> हे तुमचा फिटनेस आणि स्वास्थ्यासंबंधित सर्व डेटा  <xliff:g id="ALLOW_MODE">%2$s</xliff:g> अ‍ॅक्सेस करू शकते"</string>
     <string name="allowed_to_access" msgid="4179317387300812335">"अ‍ॅक्सेस करण्याची अनुमती आहे"</string>
     <string name="allowed_to_read" msgid="2775365229411407406">"रीड करण्याची अनुमती आहे"</string>
     <string name="give_permission_prompt" msgid="5788144216023065504">"या परवानग्या तुमच्या डिव्हाइस सेन्सरमधील <xliff:g id="APP_NAME">%1$s</xliff:g> डेटाचा अ‍ॅक्सेस देतात."</string>
@@ -1181,12 +1181,12 @@
     <string name="no_apps_requesting" msgid="8088684445910698363">"कोणत्याही अ‍ॅपची विनंती नाही"</string>
     <string name="allowed" msgid="4158456017482263737">"अनुमती आहे"</string>
     <string name="not_allowed" msgid="6092523505093372147">"अनुमती नाही"</string>
-    <string name="access_sensor_note" msgid="7949933977197789634">"ही परवानगी असलेली ॲप्स तुमच्या डिव्हाइस सेन्सरमधून <xliff:g id="DATA_TYPE">%s</xliff:g> डेटा अ‍ॅक्सेस करू शकतात."</string>
+    <string name="access_sensor_note" msgid="7949933977197789634">"ही परवानगी असलेली ॲप्स तुमच्या डिव्हाइस सेन्सरमधून <xliff:g id="DATA_TYPE">%s</xliff:g> हा डेटा अ‍ॅक्सेस करू शकतात."</string>
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"तुमच्या वॉचवरील सर्व ॲप्सचा <xliff:g id="DATA_TYPE">%s</xliff:g> ॲक्सेस काढून टाकायचा आहे का?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"बरोबरची खूण"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"फुलीची खूण"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"सध्या, <xliff:g id="APP_NAME">%1$s</xliff:g> हे आरोग्य आणि स्वास्थ्यासंबंधित डेटा <xliff:g id="ALLOW_MODE">%2$s</xliff:g> अ‍ॅक्सेस करू शकते"</string>
-    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"<xliff:g id="APP_NAME">%1$s</xliff:g> ला नेहमी आरोग्य आणि स्वास्थ्यासंबंधित डेटा अ‍ॅक्सेस करण्याची अनुमती द्यायची आहे का?"</string>
+    <string name="current_allow_mode" msgid="6716206063077569218">"सध्या, <xliff:g id="APP_NAME">%1$s</xliff:g> हे फिटनेस आणि स्वास्थ्यासंबंधित डेटा <xliff:g id="ALLOW_MODE">%2$s</xliff:g> अ‍ॅक्सेस करू शकते"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"<xliff:g id="APP_NAME">%1$s</xliff:g> ला नेहमी फिटनेस आणि स्वास्थ्यासंबंधित डेटा अ‍ॅक्सेस करण्याची अनुमती द्यायची आहे का?"</string>
     <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> ला <xliff:g id="DATA_TYPES">%2$s</xliff:g> चा अ‍ॅक्सेस आहे."</string>
-    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"आरोग्य आणि स्वास्थ्यासंबंधित परवानग्या व्यवस्थापित करा"</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"फिटनेस आणि स्वास्थ्यासंबंधित परवानग्या व्यवस्थापित करा"</string>
 </resources>
