--- a/apk/res/values-tl/strings.xml
+++ b/apk/res/values-tl/strings.xml
@@ -541,10 +541,10 @@
     <string name="onboarding_description" msgid="3479157507808350452">"Sino-store ng Health Connect ang iyong data ng kalusugan at fitness, na nagbibigay sa iyo ng simpleng paraan para i-sync ang iba\'t ibang app sa device mo"</string>
     <string name="onboarding_description_health_records" msgid="6586657048844511252">"Sino-store at sini-sync ng Health Connect ang iyong data ng kalusugan at fitness mula sa iba\'t ibang app.\n\n"<b>"Data ng fitness at wellness,"</b>" kabilang ang mga session ng pag-eehersisyo, pagtulog, at higit pa\n\n"<b>"Mga health record,"</b>" kabilang ang mga bakuna, lab result, at higit pa"</string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"Gamit ang Health Connect, magagawa mong"</string>
-    <string name="share_data" msgid="3481932156368883946">"Magbahagi ng data sa iyong mga app"</string>
-    <string name="share_data_description" msgid="2919871301634375092">"Piliin ang data na puwedeng i-read o i-write ng bawat app sa Health Connect"</string>
-    <string name="manage_your_settings" msgid="7391184508015127137">"Pamahalaan ang iyong mga setting at privacy"</string>
-    <string name="manage_your_settings_description" msgid="557943168930365334">"Baguhin ang mga pahintulot sa app at pamahalaan ang iyong data kahit kailan"</string>
+    <!-- no translation found for share_data_text (6898398345784931678) -->
+    <skip />
+    <!-- no translation found for manage_your_settings_text (8425779735541136878) -->
+    <skip />
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"Bumalik"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"Magsimula"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"Mag-delete ng data"</string>
