--- a/apk/res/values-uz/strings.xml
+++ b/apk/res/values-uz/strings.xml
@@ -541,10 +541,10 @@
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connect salomatlik va fitnes maʼlumotlaringizni xavfsiz saqlaydi va qurilmadagi boshqa ilovalarga oson sinxronlash imkonini beradi"</string>
     <string name="onboarding_description_health_records" msgid="6586657048844511252">"Health Connect salomatlik va fitnes axborotlaringizni turli ilovalardan saqlaydi va sinxronlaydi.\n\n"<b>"Fitnes va salomatlik maʼlumotlari,"</b>" jumladan, mashq seanslari, qadamlar, ovqatlanish, uyqu va boshqa maʼlumotlar\n\n"<b>"Tibbiy qaydlar,"</b>" jumladan, vaksinalar, laboratoriya natijalari va boshqalar"</string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"Health Connect yordamida siz quyidagilarni bajara olasiz:"</string>
-    <string name="share_data" msgid="3481932156368883946">"Ilovalarga axborot ulashish"</string>
-    <string name="share_data_description" msgid="2919871301634375092">"Har bir ilova Health Connect xizmatining qaysi axborotlarni oʻqishi va yozishini tanlang."</string>
-    <string name="manage_your_settings" msgid="7391184508015127137">"Sozlamalar va maxfiylikni boshqarish"</string>
-    <string name="manage_your_settings_description" msgid="557943168930365334">"Istalgan vaqtda ilova ruxsatlarini oʻzgartiring va maʼlumotlaringizni boshqaring"</string>
+    <!-- no translation found for share_data_text (6898398345784931678) -->
+    <skip />
+    <!-- no translation found for manage_your_settings_text (8425779735541136878) -->
+    <skip />
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"Orqaga"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"Boshlash"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"Maʼlumotlarni oʻchirib tashlash"</string>
@@ -1112,7 +1112,7 @@
     <string name="last_week_header" msgid="5194448963146719382">"Avvalgi hafta"</string>
     <string name="this_month_header" msgid="2452395268894677189">"Shu oyda"</string>
     <string name="last_month_header" msgid="1359164797239191253">"Avvalgi oy"</string>
-    <string name="tab_entries" msgid="3402700951602029493">"Maʼlumotlar kiritish"</string>
+    <string name="tab_entries" msgid="3402700951602029493">"Qaydlar"</string>
     <string name="tab_access" msgid="7818197975407243701">"Ruxsat"</string>
     <string name="start_using_hc_banner_title" msgid="2030178284749796384">"Health Connect ishlatishni boshlash"</string>
     <string name="start_using_hc_banner_content" msgid="3171560198945933334">"Salomatlik va fitnes maʼlumotlarni oʻzaro ulashadigan ilk ilovalaringizni sinxronlang"</string>
@@ -1146,7 +1146,7 @@
     <string name="all_entries_selected_month_deletion_confirmation_dialog" msgid="6030161837387559132">"<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>dagi barcha maʼlumotlar butunlay oʻchirilsinmi?"</string>
     <string name="some_entries_selected_day_deletion_confirmation_dialog" msgid="3481363886097542565">"<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>dagi tanlangan maʼlumotlar butunlay oʻchirib tashlansinmi?"</string>
     <string name="some_entries_selected_week_deletion_confirmation_dialog" msgid="7150217982297131340">"<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> haftasidagi tanlangan maʼlumotlar butunlay oʻchirib tashlansinmi?"</string>
-    <string name="some_entries_selected_month_deletion_confirmation_dialog" msgid="3712014725077445591">"<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>dagi tanlangan maʼlumotlar butunlay oʻchirib tashlansinmi?"</string>
+    <string name="some_entries_selected_month_deletion_confirmation_dialog" msgid="3712014725077445591">"<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> sanasidagi tanlangan maʼlumotlar butunlay oʻchirib tashlansinmi?"</string>
     <string name="one_entry_selected_deletion_confirmation_dialog" msgid="4642573082594021789">"Bu yozuv butunlay oʻchirib tashlansinmi?"</string>
     <string name="all_app_entries_selected_day_deletion_confirmation_dialog" msgid="2342034541791960151">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>dagi barcha <xliff:g id="APP_NAME">%1$s</xliff:g> yozuvlari oʻchirib tashlansinmi?"</string>
     <string name="all_app_entries_selected_week_deletion_confirmation_dialog" msgid="24289763841770386">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> haftasidagi barcha <xliff:g id="APP_NAME">%1$s</xliff:g> yozuvlari oʻchirib tashlansinmi?"</string>
