--- a/apk/res/values-zh-rCN/strings.xml
+++ b/apk/res/values-zh-rCN/strings.xml
@@ -168,10 +168,10 @@
     <string name="elevation_gained_lowercase_label" msgid="7532517182346738562">"爬升高度"</string>
     <string name="elevation_gained_read_content_description" msgid="6018756385903843355">"读取爬升高度数据"</string>
     <string name="elevation_gained_write_content_description" msgid="6790199544670231367">"写入爬升高度数据"</string>
-    <string name="floors_climbed_uppercase_label" msgid="3754372357767832441">"已爬楼层数"</string>
-    <string name="floors_climbed_lowercase_label" msgid="5326072443481377299">"已爬楼层数"</string>
-    <string name="floors_climbed_read_content_description" msgid="4730764877684911752">"读取已爬楼层数数据"</string>
-    <string name="floors_climbed_write_content_description" msgid="3480340610185615655">"写入已爬楼层数数据"</string>
+    <string name="floors_climbed_uppercase_label" msgid="3754372357767832441">"爬楼层数"</string>
+    <string name="floors_climbed_lowercase_label" msgid="5326072443481377299">"爬楼层数"</string>
+    <string name="floors_climbed_read_content_description" msgid="4730764877684911752">"读取爬楼层数数据"</string>
+    <string name="floors_climbed_write_content_description" msgid="3480340610185615655">"写入爬楼层数数据"</string>
     <string name="power_uppercase_label" msgid="8027219480901448660">"动力"</string>
     <string name="power_lowercase_label" msgid="3893286148577044369">"动力"</string>
     <string name="power_read_content_description" msgid="6821797135406643841">"读取动力数据"</string>
@@ -384,7 +384,7 @@
     <string name="permissions_disconnect_dialog_message_history" msgid="3793206180295111081">"“<xliff:g id="APP_NAME">%1$s</xliff:g>”将无法再读取“健康数据共享”中的任何数据或向其中写入数据，包括历史数据。\n\n这不会影响此应用可能拥有的其他权限，例如位置信息、摄像头或麦克风使用权。"</string>
     <string name="permissions_disconnect_dialog_message_combined" msgid="4163369526932602203">"“<xliff:g id="APP_NAME">%1$s</xliff:g>”将无法再读取“健康数据共享”中的任何数据或向其中写入数据，包括后台和历史数据。\n\n这不会影响此应用可能拥有的其他权限，例如位置信息、摄像头或麦克风使用权。"</string>
     <string name="permissions_disconnect_dialog_checkbox" msgid="8646951566431872823">"同时删除“健康数据共享”中的“<xliff:g id="APP_NAME">%1$s</xliff:g>”数据"</string>
-    <string name="disconnect_all_fitness_permissions_title" msgid="7612364222525900592">"要移除所有的健身和健康相关权限吗？"</string>
+    <string name="disconnect_all_fitness_permissions_title" msgid="7612364222525900592">"要移除所有的健身与健康相关权限吗？"</string>
     <string name="disconnect_all_fitness_permissions_dialog_checkbox" msgid="8808559689899914478">"同时从“健康数据共享”中删除来自“<xliff:g id="APP_NAME">%1$s</xliff:g>”的健身数据"</string>
     <string name="disconnect_all_medical_permissions_title" msgid="735315242997370168">"要移除所有的健康记录相关权限吗？"</string>
     <string name="disconnect_all_medical_permissions_dialog_checkbox" msgid="7782158941871987263">"同时从“健康数据共享”中删除来自“<xliff:g id="APP_NAME">%1$s</xliff:g>”的健康记录"</string>
@@ -443,7 +443,7 @@
     <string name="additional_access_summary" msgid="1076197455435130191">"历史数据、后台数据"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"已撤消此应用的其他权限"</string>
     <string name="permissions_header" msgid="6519976063360071569">"权限"</string>
-    <string name="fitness_permissions" msgid="586264186537460254">"健身和健康"</string>
+    <string name="fitness_permissions" msgid="586264186537460254">"健身与健康"</string>
     <string name="fitness_permissions_summary" msgid="6476469281589015459">"锻炼、睡眠、营养等"</string>
     <string name="medical_permissions" msgid="1224097151249321566">"健康记录"</string>
     <string name="medical_permissions_lowercase" msgid="3969792205103436491">"健康记录"</string>
@@ -537,14 +537,14 @@
     <string name="export_import_no_apps_text" msgid="6403119325024893690">"没有可用的应用。安装云端存储空间应用即可在此处查看您的数据"</string>
     <string name="export_import_install_apps_text" msgid="5026922993254770904">"如需更多选项，请安装云端存储空间应用，然后这里就会显示相关选项"</string>
     <string name="export_import_go_to_play_store_text" msgid="3210733429377429794">"前往 Play 商店"</string>
-    <string name="onboarding_title" msgid="8550656211291180188">"开始使用健康数据共享"</string>
+    <string name="onboarding_title" msgid="8550656211291180188">"开始使用“健康数据共享”"</string>
     <string name="onboarding_description" msgid="3479157507808350452">"“健康数据共享”会存储您的健康与健身数据，让您可以轻松同步设备上各应用的数据"</string>
-    <string name="onboarding_description_health_records" msgid="6586657048844511252">"“健康数据共享”会存储和同步来自不同应用的健康与健身数据。\n\n"<b>"健康与健身数据，"</b>"包括锻炼时段、步数、营养、睡眠等\n\n"<b>"健康记录，"</b>"包括疫苗接种、化验结果等"</string>
+    <string name="onboarding_description_health_records" msgid="6586657048844511252">"“健康数据共享”会存储和同步来自不同应用的健康和健身数据。\n\n"<b>"健身与健康数据，"</b>"包括锻炼时段、步数、营养、睡眠等\n\n"<b>"健康记录，"</b>"包括疫苗接种、化验结果等"</string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"借助“健康数据共享”，您可以"</string>
-    <string name="share_data" msgid="3481932156368883946">"与应用分享数据"</string>
-    <string name="share_data_description" msgid="2919871301634375092">"选择每个应用可以从健康数据共享中读取或向其中写入的数据"</string>
-    <string name="manage_your_settings" msgid="7391184508015127137">"管理设置和隐私"</string>
-    <string name="manage_your_settings_description" msgid="557943168930365334">"随时更改应用权限并管理您的数据"</string>
+    <!-- no translation found for share_data_text (6898398345784931678) -->
+    <skip />
+    <!-- no translation found for manage_your_settings_text (8425779735541136878) -->
+    <skip />
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"返回"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"开始使用"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"删除数据"</string>
@@ -1104,7 +1104,7 @@
     <string name="default_app_summary" msgid="6183876151011837062">"设备默认设置"</string>
     <string name="app_data_title" msgid="6499967982291000837">"应用数据"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"来自“<xliff:g id="APP_NAME">%1$s</xliff:g>”的数据将显示在此处"</string>
-    <string name="all_data_no_data_footer" msgid="2553443887019153340">"来自以下应用的数据将显示在此处：具有“健康数据共享”访问权限的应用"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"具有“健康数据共享”访问权限的应用写入的数据会显示在这里"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"日"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"周"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"月"</string>
@@ -1113,7 +1113,7 @@
     <string name="this_month_header" msgid="2452395268894677189">"本月"</string>
     <string name="last_month_header" msgid="1359164797239191253">"上个月"</string>
     <string name="tab_entries" msgid="3402700951602029493">"条目"</string>
-    <string name="tab_access" msgid="7818197975407243701">"有访问权限的应用"</string>
+    <string name="tab_access" msgid="7818197975407243701">"访问权限"</string>
     <string name="start_using_hc_banner_title" msgid="2030178284749796384">"开始使用“健康数据共享”"</string>
     <string name="start_using_hc_banner_content" msgid="3171560198945933334">"同步您的首批应用，以便在它们之间共享健康与健身数据"</string>
     <string name="start_using_hc_set_up_button" msgid="7486865297236439364">"设置"</string>
@@ -1141,18 +1141,18 @@
     <string name="some_data_selected_deletion_confirmation_dialog" msgid="2466281529240054537">"要永久删除所选数据吗？"</string>
     <string name="all_app_data_selected_deletion_confirmation_dialog" msgid="1077157006579195958">"要永久删除所有“<xliff:g id="APP_NAME">%s</xliff:g>”数据吗？"</string>
     <string name="some_app_data_selected_deletion_confirmation_dialog" msgid="5378172524112070270">"要永久删除所选的“<xliff:g id="APP_NAME">%s</xliff:g>”数据吗？"</string>
-    <string name="all_entries_selected_day_deletion_confirmation_dialog" msgid="2887646600541520444">"要永久删除 <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>的所有条目吗？"</string>
-    <string name="all_entries_selected_week_deletion_confirmation_dialog" msgid="6759608395185369048">"要永久删除 <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>这一周的所有条目吗？"</string>
-    <string name="all_entries_selected_month_deletion_confirmation_dialog" msgid="6030161837387559132">"要永久删除 <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>的所有条目吗？"</string>
-    <string name="some_entries_selected_day_deletion_confirmation_dialog" msgid="3481363886097542565">"要永久删除 <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>的所选条目吗？"</string>
-    <string name="some_entries_selected_week_deletion_confirmation_dialog" msgid="7150217982297131340">"要永久删除 <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>这一周的所选条目吗？"</string>
+    <string name="all_entries_selected_day_deletion_confirmation_dialog" msgid="2887646600541520444">"要永久删除<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>的所有条目吗？"</string>
+    <string name="all_entries_selected_week_deletion_confirmation_dialog" msgid="6759608395185369048">"要永久删除<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>这一周的所有条目吗？"</string>
+    <string name="all_entries_selected_month_deletion_confirmation_dialog" msgid="6030161837387559132">"要永久删除<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>的所有条目吗？"</string>
+    <string name="some_entries_selected_day_deletion_confirmation_dialog" msgid="3481363886097542565">"要永久删除<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>的所选条目吗？"</string>
+    <string name="some_entries_selected_week_deletion_confirmation_dialog" msgid="7150217982297131340">"要永久删除<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>这一周的所选条目吗？"</string>
     <string name="some_entries_selected_month_deletion_confirmation_dialog" msgid="3712014725077445591">"要永久删除<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>的所选条目吗？"</string>
     <string name="one_entry_selected_deletion_confirmation_dialog" msgid="4642573082594021789">"要永久删除此条目吗？"</string>
-    <string name="all_app_entries_selected_day_deletion_confirmation_dialog" msgid="2342034541791960151">"要永久删除 <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>的所有“<xliff:g id="APP_NAME">%1$s</xliff:g>”条目吗？"</string>
-    <string name="all_app_entries_selected_week_deletion_confirmation_dialog" msgid="24289763841770386">"要永久删除 <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>这一周的所有“<xliff:g id="APP_NAME">%1$s</xliff:g>”条目吗？"</string>
-    <string name="all_app_entries_selected_month_deletion_confirmation_dialog" msgid="3240581815583269052">"要永久删除 <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>的所有“<xliff:g id="APP_NAME">%1$s</xliff:g>”条目吗？"</string>
-    <string name="some_app_entries_selected_day_deletion_confirmation_dialog" msgid="1030347169774815676">"要永久删除 <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>的所选“<xliff:g id="APP_NAME">%1$s</xliff:g>”条目吗？"</string>
-    <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"要永久删除 <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>这一周的所选“<xliff:g id="APP_NAME">%1$s</xliff:g>”条目吗？"</string>
+    <string name="all_app_entries_selected_day_deletion_confirmation_dialog" msgid="2342034541791960151">"要永久删除<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>的所有“<xliff:g id="APP_NAME">%1$s</xliff:g>”条目吗？"</string>
+    <string name="all_app_entries_selected_week_deletion_confirmation_dialog" msgid="24289763841770386">"要永久删除<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>这一周的所有“<xliff:g id="APP_NAME">%1$s</xliff:g>”条目吗？"</string>
+    <string name="all_app_entries_selected_month_deletion_confirmation_dialog" msgid="3240581815583269052">"要永久删除<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>的所有“<xliff:g id="APP_NAME">%1$s</xliff:g>”条目吗？"</string>
+    <string name="some_app_entries_selected_day_deletion_confirmation_dialog" msgid="1030347169774815676">"要永久删除<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>的所选“<xliff:g id="APP_NAME">%1$s</xliff:g>”条目吗？"</string>
+    <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"要永久删除<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>这一周的所选“<xliff:g id="APP_NAME">%1$s</xliff:g>”条目吗？"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"要永久删除<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>的所选“<xliff:g id="APP_NAME">%1$s</xliff:g>”条目吗？"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"要永久删除此“<xliff:g id="APP_NAME">%s</xliff:g>”条目吗？"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"要永久删除“<xliff:g id="APP_NAME">%2$s</xliff:g>”的<xliff:g id="DATA_TYPE">%1$s</xliff:g>数据吗？"</string>
@@ -1166,18 +1166,18 @@
     <string name="request_permissions_while_using_the_app" msgid="5155929974398889727">"仅在使用该应用时允许"</string>
     <string name="request_permissions_deny_all" msgid="4123735770293545320">"全部拒绝"</string>
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"要允许“<xliff:g id="APP_NAME">%1$s</xliff:g>”访问健身与健康数据吗？"</string>
-    <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g>正在请求访问“<xliff:g id="DATA_TYPES">%2$s</xliff:g>”。\n\n您可以全部允许，也可以单独控制。"</string>
+    <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"“<xliff:g id="APP_NAME">%1$s</xliff:g>”正在请求访问“<xliff:g id="DATA_TYPES">%2$s</xliff:g>”。\n\n您可以全部允许，也可以单独控制。"</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"允许“<xliff:g id="APP_NAME">%1$s</xliff:g>”访问<xliff:g id="DATA_TYPE">%2$s</xliff:g>吗？"</string>
-    <string name="fitness_and_wellness" msgid="2002316898861559748">"健身和健康"</string>
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"健身与健康"</string>
     <string name="view_permissions_all_the_time" msgid="6899702815770193290">"始终"</string>
     <string name="view_permissions_while_in_use" msgid="2031627107397429473">"使用期间"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"始终"</string>
     <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"使用期间"</string>
-    <string name="view_permissions_mode" msgid="5954826327563393399">"“<xliff:g id="APP_NAME">%1$s</xliff:g>”<xliff:g id="ALLOW_MODE">%2$s</xliff:g>可以访问您的所有健身和健康数据"</string>
+    <string name="view_permissions_mode" msgid="5954826327563393399">"“<xliff:g id="APP_NAME">%1$s</xliff:g>”<xliff:g id="ALLOW_MODE">%2$s</xliff:g>可以访问您的所有健身与健康数据"</string>
     <string name="allowed_to_access" msgid="4179317387300812335">"允许访问"</string>
     <string name="allowed_to_read" msgid="2775365229411407406">"允许读取"</string>
     <string name="give_permission_prompt" msgid="5788144216023065504">"有了这些权限，“<xliff:g id="APP_NAME">%1$s</xliff:g>”便可访问设备传感器中的数据。"</string>
-    <string name="allowed_apps_count" msgid="2289260267605628310">"允许 <xliff:g id="NUMBER_0">%1$d</xliff:g> 个应用（共 <xliff:g id="OTHER_NUMBER">%2$d</xliff:g> 个）"</string>
+    <string name="allowed_apps_count" msgid="2289260267605628310">"已允许 <xliff:g id="NUMBER_0">%1$d</xliff:g> 个应用（共 <xliff:g id="OTHER_NUMBER">%2$d</xliff:g> 个）"</string>
     <string name="no_apps_requesting" msgid="8088684445910698363">"没有应用请求权限"</string>
     <string name="allowed" msgid="4158456017482263737">"允许"</string>
     <string name="not_allowed" msgid="6092523505093372147">"不允许"</string>
@@ -1187,6 +1187,6 @@
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"叉号"</string>
     <string name="current_allow_mode" msgid="6716206063077569218">"目前，“<xliff:g id="APP_NAME">%1$s</xliff:g>”可以访问健身与健康数据，相应的权限类型为“<xliff:g id="ALLOW_MODE">%2$s</xliff:g>”"</string>
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"始终允许“<xliff:g id="APP_NAME">%1$s</xliff:g>”访问健身与健康数据？"</string>
-    <string name="current_access" msgid="1457167070428176139">"“<xliff:g id="APP_NAME">%1$s</xliff:g>”有权访问<xliff:g id="DATA_TYPES">%2$s</xliff:g>。"</string>
+    <string name="current_access" msgid="1457167070428176139">"“<xliff:g id="APP_NAME">%1$s</xliff:g>”可以访问<xliff:g id="DATA_TYPES">%2$s</xliff:g>。"</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"管理健身与健康相关权限"</string>
 </resources>
