--- a/apk/res/values-zh-rHK/strings.xml
+++ b/apk/res/values-zh-rHK/strings.xml
@@ -168,7 +168,7 @@
     <string name="elevation_gained_lowercase_label" msgid="7532517182346738562">"爬升高度"</string>
     <string name="elevation_gained_read_content_description" msgid="6018756385903843355">"讀取爬升高度資料"</string>
     <string name="elevation_gained_write_content_description" msgid="6790199544670231367">"寫入爬升高度資料"</string>
-    <string name="floors_climbed_uppercase_label" msgid="3754372357767832441">"已行樓梯層數"</string>
+    <string name="floors_climbed_uppercase_label" msgid="3754372357767832441">"行樓梯層數"</string>
     <string name="floors_climbed_lowercase_label" msgid="5326072443481377299">"已行樓梯層數"</string>
     <string name="floors_climbed_read_content_description" msgid="4730764877684911752">"讀取已行樓梯層數資料"</string>
     <string name="floors_climbed_write_content_description" msgid="3480340610185615655">"寫入已行樓梯層數資料"</string>
@@ -537,14 +537,14 @@
     <string name="export_import_no_apps_text" msgid="6403119325024893690">"沒有可用的應用程式。安裝雲端儲存空間應用程式，即可在此查看"</string>
     <string name="export_import_install_apps_text" msgid="5026922993254770904">"如需使用更多選項，請安裝雲端儲存空間應用程式"</string>
     <string name="export_import_go_to_play_store_text" msgid="3210733429377429794">"前往「Play 商店」"</string>
-    <string name="onboarding_title" msgid="8550656211291180188">"開始使用 Health Connect"</string>
+    <string name="onboarding_title" msgid="8550656211291180188">"開始使用「健康資料同步」"</string>
     <string name="onboarding_description" msgid="3479157507808350452">"「健康資料同步」能儲存健康和健身資料，方便你同步處理裝置上各個應用程式的資料"</string>
     <string name="onboarding_description_health_records" msgid="6586657048844511252">"「健康資料同步」會儲存及同步來自不同應用程式的健康和健身資料。\n\n"<b>"健康和健身資料："</b>"包括運動時段、步數、營養、睡眠等等\n\n"<b>"健康記錄："</b>"包括疫苗、檢測結果等等"</string>
-    <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"你可以用「健康資料同步」嚟"</string>
-    <string name="share_data" msgid="3481932156368883946">"與應用程式分享資料"</string>
-    <string name="share_data_description" msgid="2919871301634375092">"選擇每個應用程式可讀取或寫入 Health Connect 的資料"</string>
-    <string name="manage_your_settings" msgid="7391184508015127137">"管理設定和私隱"</string>
-    <string name="manage_your_settings_description" msgid="557943168930365334">"隨時變更應用程式權限及管理資料"</string>
+    <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"「健康資料同步」的用途"</string>
+    <!-- no translation found for share_data_text (6898398345784931678) -->
+    <skip />
+    <!-- no translation found for manage_your_settings_text (8425779735541136878) -->
+    <skip />
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"返回"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"開始使用"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"刪除資料"</string>
@@ -1104,7 +1104,7 @@
     <string name="default_app_summary" msgid="6183876151011837062">"裝置預設設定"</string>
     <string name="app_data_title" msgid="6499967982291000837">"應用程式資料"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"「<xliff:g id="APP_NAME">%1$s</xliff:g>」的資料將在這裡顯示"</string>
-    <string name="all_data_no_data_footer" msgid="2553443887019153340">"資料來自可存取「健康資料同步」的應用程式將會在這裡顯示"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"這裡會顯示可存取「健康資料同步」的應用程式的資料"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"日"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"週"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"月"</string>
