--- a/apk/res/values-zh-rTW/strings.xml
+++ b/apk/res/values-zh-rTW/strings.xml
@@ -541,10 +541,10 @@
     <string name="onboarding_description" msgid="3479157507808350452">"「健康資料同步」會儲存健康與健身資料，方便你在裝置上同步不同應用程式的資料"</string>
     <string name="onboarding_description_health_records" msgid="6586657048844511252">"「健康資料同步」會儲存及同步來自不同應用程式的健康與健身資料。\n\n"<b>"健身與健康資料"</b>"：包括運動時段、步數、營養、睡眠等等\n\n"<b>"健康記錄"</b>"：包括疫苗接種、檢驗結果等等"</string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"你可以使用「健康資料同步」執行下列操作："</string>
-    <string name="share_data" msgid="3481932156368883946">"與應用程式分享資料"</string>
-    <string name="share_data_description" msgid="2919871301634375092">"選擇每個應用程式可讀取或寫入「健康資料同步」的資料"</string>
-    <string name="manage_your_settings" msgid="7391184508015127137">"管理設定和隱私權"</string>
-    <string name="manage_your_settings_description" msgid="557943168930365334">"你隨時可以變更應用程式權限及管理資料"</string>
+    <!-- no translation found for share_data_text (6898398345784931678) -->
+    <skip />
+    <!-- no translation found for manage_your_settings_text (8425779735541136878) -->
+    <skip />
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"返回"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"開始使用"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"刪除資料"</string>
@@ -1104,7 +1104,7 @@
     <string name="default_app_summary" msgid="6183876151011837062">"裝置預設設定"</string>
     <string name="app_data_title" msgid="6499967982291000837">"應用程式資料"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"「<xliff:g id="APP_NAME">%1$s</xliff:g>」的資料會顯示在這裡"</string>
-    <string name="all_data_no_data_footer" msgid="2553443887019153340">"如果資料來自可存取「健康資料同步」的應用程式，就會顯示在這裡"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"如果資料來自可存取「健康資料同步」的應用程式，就會在此顯示"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"一天"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"一週"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"一個月"</string>
@@ -1168,7 +1168,7 @@
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"要允許「<xliff:g id="APP_NAME">%1$s</xliff:g>」存取健身與健康資料嗎？"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"「<xliff:g id="APP_NAME">%1$s</xliff:g>」要求存取<xliff:g id="DATA_TYPES">%2$s</xliff:g>資料。\n\n你可以全部允許，也可以個別授予權限。"</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"要允許「<xliff:g id="APP_NAME">%1$s</xliff:g>」存取「<xliff:g id="DATA_TYPE">%2$s</xliff:g>」嗎？"</string>
-    <string name="fitness_and_wellness" msgid="2002316898861559748">"健身與保健"</string>
+    <string name="fitness_and_wellness" msgid="2002316898861559748">"健身與健康"</string>
     <string name="view_permissions_all_the_time" msgid="6899702815770193290">"一律允許"</string>
     <string name="view_permissions_while_in_use" msgid="2031627107397429473">"僅在使用時允許"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"一律允許"</string>
